@@ -1,4 +1,12 @@
 2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+	* vc-clearcase.el (clearcase-revert-unchanged-files): new function
+
+	* ucm.el (ucm-actb-show-diff, ucm-actb-revert-command): don't use
+	`find-file-noselect', instead use `vc-clearcase-registered'.
+	(ucm-actb-checkin-command, ucm-checkin-activity): use
+	`clearcase-revert-unchanged-files'
+
+2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (clearcase-setup-vprop): check that the supplied
 	DIR param is actually inside this view.  Also set the ROOT-PATH
